Switch default layout to title-included "page"

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-layout: default
 title: Deltarune Script Project
+hide_title: true
 ---
 <section class="d-section" id="intro">
 	<p>A project aimed at creating a complete script of <a href="https://deltarune.com">Deltarune</a> by Toby Fox.</p>
