--- a/index.html
+++ b/index.html
@@ -7,3 +7,28 @@ hide_title: true
 
 	<p>Inspired by the <a href="https://felicitations.neocities.org/">ISAT Script Project</a>.</p>
 </section>
+
+<section class="d-section" id="usage">
+	<h2>Site tips</h2>
+	<p>The script has been organized by chapters and locations. <span class="orange">(ISP has it like that, story (subdivided by locations) and locations (subdivided by story). Unless there's some more logical way of doing it...)</span></p>
+	<p class="orange">(TODO: Include a full index of some sort? e.g. if we're doing Chapters as a division then /chapter1, /chapter2, etc)</p>
+	<p>Check the bottom right menu for extra features:</p>
+	<ul>
+		<li><span class="lightyellow">Compact mode</span>: Just the dialogue, no sprites, so you can focus on what's being said.</li>
+		<li><span class="lightyellow">Dyslexia-friendly mode</span>: Switches to the <a href="https://antijingoist.itch.io/opendyslexic">OpenDyslexic font</a> for easier reading.</li>
+		<li><span class="lightyellow">Show all choices</span>: Displays results of all choices for easier searching.</li>
+	</ul>
+</section>
+
+<section class="d-section" id="contribute">
+	<h2>Contribute</h2>
+
+	<p>This is a community project, and we welcome help! Check out the <a href="https://github.io/wovenstarlight/deltascript">Github page</a> to see how you can contribute.</p>
+
+	<p class="orange">TEMPORARY GUIDES (move these to Github at some point)</p>
+	<ul>
+		<li><a href="{{ '/contribute/htmlguide' | relative_url }}">Guide to the HTML elements used for the script</a></li>
+		<li><a href="{{ '/contribute/examples' | relative_url }}">Examples of dialogue, choices, and special features</a></li>
+	</ul>
+
+</section>
