Replace ISP abbreviation with full name for clarity

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ hide_title: true
 
 <section class="d-section" id="usage">
 	<h2>Site tips</h2>
-	<p>The script has been organized by chapters and locations. <span class="orange">(ISP has it like that, story (subdivided by locations) and locations (subdivided by story). Unless there's some more logical way of doing it...)</span></p>
+	<p>The script has been organized by chapters and locations. <span class="orange">(ISAT Script Project has it like that, story (subdivided by locations) and locations (subdivided by story). Unless there's some more logical way of doing it...)</span></p>
 	<p class="orange">(TODO: Include a full index of some sort? e.g. if we're doing Chapters as a division then /chapter1, /chapter2, etc)</p>
 	<p>Check the bottom right menu for extra features:</p>
 	<ul>
