Fix Github link on home page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ hide_title: true
 <section class="d-section" id="contribute">
 	<h2>Contribute</h2>
 
-	<p>This is a community project, and we welcome help! Check out the <a href="https://github.io/wovenstarlight/deltascript">Github page</a> to see how you can contribute.</p>
+	<p>This is a community project, and we welcome help! Check out the <a href="{{ site.github }}">Github page</a> to see how you can contribute.</p>
 
 	<p class="orange">TEMPORARY GUIDES (move these to Github at some point)</p>
 	<ul>
