Add desc/credits to contribution pages

--- a/contribute/examples.html
+++ b/contribute/examples.html
@@ -1,5 +1,9 @@
 ---
 title: Examples
+description: >
+  <p>Examples of dialogue boxes, choices menus, and special formatting, accompanied by the code used to create them.</p>
+credits: >
+  <p>Compiled by wovenstarlight.</p>
 ---
 <section class="d-section" id="basic">
 	<h2>Standard dialogue</h2>
