--- a/contribute/htmlguide.html
+++ b/contribute/htmlguide.html
@@ -1,5 +1,9 @@
 ---
 title: HTML Guide
+description: >
+  <p>A guide to the HTML elements used to construct dialogue boxes, choice menus, and more.</p>
+credits: >
+  <p>Compiled by wovenstarlight.</p>
 ---
 <section class="d-section" id="elements">
 	<table id="guide">
