Add chapters index page
Also link to it on the home page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@ hide_title: true
 	<p>Inspired by the <a href="https://felicitations.neocities.org/">ISAT Script Project</a>.</p>
 </section>
 
-<section class="d-section" id="usage">
-	<h2>Site tips</h2>
+<section class="d-section" id="index">
+	<h2>Index</h2>
 	<p>The script has been organized by chapters and locations. <span class="orange">(ISAT Script Project has it like that, story (subdivided by locations) and locations (subdivided by story). Unless there's some more logical way of doing it...)</span></p>
 	<p class="orange">(TODO: Include a full index of some sort? e.g. if we're doing Chapters as a division then /chapter1, /chapter2, etc)</p>
+
+	<ul>
+		<li>
+			<a href="{{ '/chapters' | relative_url }}">Chapters</a>
+			<ul>
+				<li><a href="{{ '/chapters#chapter1' | relative_url }}">Chapter 1</a></li>
+			</ul>
+		</li>
+	</ul>
+</section>
+
+<section class="d-section" id="usage">
+	<h2>Site tips</h2>
 	<p>Check the bottom right menu for extra features:</p>
 	<ul>
 		<li><span class="lightyellow">Compact mode</span>: Just the dialogue, no sprites, so you can focus on what's being said.</li>
