--- a/contribute/htmlguide.html
+++ b/contribute/htmlguide.html
@@ -83,8 +83,10 @@ credits: >
 					<ul>
 						<li><code>\s</code> for a linebreak between words</li>
 						<li><code>\b</code> for a linebreak within a word</li>
-						<li><code>\h</code> to hide the next character</li>
-					</ul></li>
+						<li><code>\h</code> to hide the next character in compact mode</li>
+					</ul>
+					Example: When talking to Onion, the options for your own name are <code>"Kris"</code> and <code>"Hippo-#potamus"</code>. The latter would be formatted as <code>&lt;d-option index="1" text="Hippo\h-\bpotamus"&gt;</code>. The <code>\b</code> means it'll be split with a hyphen in full-size mode, and the <code>\h</code> means it'll display as <code>Hippopotamus</code> without the hyphen in compact mode's single-line format.
+					</li>
 					<li><code>conditional</code>: For when an option only appears under specific conditions</li>
 				</ul></td>
 				<td>None</td>
