Remove annotation from template
Moved descriptions to README

--- a/contribute/template.html
+++ b/contribute/template.html
@@ -7,7 +7,7 @@ description: >
 credits: >
   <p>Compiled by [yournamehere].</p>
 
-sources:  # A list with items (designated by -) containing a "url" and a "name". Only chapter 1/2 scripts are on deltarune.wiki right now...
+sources:
   -
     url: "https://code.deltarune.wiki/"
     name: gml_GlobalScript_script_name_here
