HTML guide: Elaborate on d-text's asterisk and add font attribute

--- a/contribute/htmlguide.html
+++ b/contribute/htmlguide.html
@@ -57,7 +57,20 @@ credits: >
 				<td>d-text</td>
 				<td>A line of text</td>
 				<td><ul>
-					<li><code>asterisk</code>: To include a <code>*</code> before the text</li>
+					<li>
+						<code>asterisk</code>: To include a <code>*</code> before the text. Can be set to one of the following to change the asterisk to a group speaker's symbol (case-insensitive):
+						<ul>
+							<li><code>Sweet</code></li>
+							<li><code>Cap'n</code> or <code>Capn</code></li>
+							<li><code>K_K</code> or <code>KK</code></li>
+							<li><code>Happy</code> or <code>Nice</code></li>
+							<li><code>Mad</code> or <code>Mean</code></li>
+							<li><code>Sad</code> or <code>Shy</code></li>
+						</ul>
+					</li>
+					<li>
+						<code>font = "tiny" | "sans"</code>: Changes the font used to Noelle's shy whispering or Comic Sans, respectively.
+					</li>
 				</ul></td>
 				<td>Plaintext</td>
 			</tr>
