Remove OpenDyslexia toggle (TEMP), update to-do list
Need to check font sizing against all elements… the basic fonts are already giving me so much trouble with em sizing.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ hide_title: true
 	<p>Check the bottom right menu for extra features:</p>
 	<ul>
 		<li><span class="lightyellow">Compact mode</span>: Just the dialogue, no sprites, so you can focus on what's being said.</li>
+		{%- comment %}
 		<li><span class="lightyellow">Dyslexia-friendly mode</span>: Switches to the <a href="https://antijingoist.itch.io/opendyslexic">OpenDyslexic font</a> for easier reading.</li>
+		{% endcomment %}
 		<li><span class="lightyellow">Show all choices</span>: Displays results of all choices for easier searching.</li>
 	</ul>
 </section>
