Save points: Add offset note for Mike Zone

--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -51,7 +51,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 	- Chapter 1: offset by 10281
 	- Chapter 2: offset by 20010
 	- Chapter 3: offset by. Um I'm not sure it's either 29999 or 30001
-	- Chapter 4: offset by 39999 or 40000 or 40001 >:(
+	- Chapter 4: offset by 39999 or 40000 or 40001 >:( OR 40003 FOR MIKE ZONE? DUDE.
 {% endcomment -%}
 
 
