Save points: Fix typo

--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -564,7 +564,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 
 	<!-- FXX -->
 	<h4>(UNUSED) If you haven't destroyed the Shadowguys's contracts</h4>
-	<p>Included for completion, but in any case where it would play, it gets overriden by the two following sections' narration.</p>
+	<p>Included for completion, but in any case where it would play, it gets overridden by the two following sections' narration.</p>
 	<p></p>
 	<p class="note">The crowd is present if less than 5 Darkners have been LOST in the TV World.</p>
 
