Document Susie's axes

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -291,7 +291,225 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-{% comment %} TODO: Susie's axes {% endcomment %}
+<section class="d-section" id="axes">
+	<h2>Susie's axes</h2>
+
+	<h3>Mane Ax</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>Beginner's ax forged from the<br>mane of a dragon whelp.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>I'm too GOOD for that.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>Ummm... it's a bit big.</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>It... smells nice...</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Brave Ax</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A glossy ax from a block warrior.</d-text>
+		<d-text>Suitable for heroes.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Well, if I have to.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>It's a bit too heavy...</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>(W-wow, what presence...)</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Devilsknife</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>Skull-emblazoned scythe-ax.</d-text>
+		<d-text>Reduces Rudebuster's cost by 10</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Let the games begin!</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>It's too, um, evil.</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>...? It smiled at me?</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Auto Axe</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>Make sure to charge it by<br>plugging it into the wall.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>*chainsaw noises* Hahaha!!</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>(Is this a good idea?)</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>*zrrt* A-AHH! Scared myself...</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Toxic Axe</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>An axe used to clear wastelands<br>in a fetid swamp. Not poison, but gross.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Eat dirt, losers.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>Could I wash it off first?</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>N-no way! Susie wouldn't use that!</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>JusticeAxe</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>It has no special powers. However, in order to attain this item, you became much stronger!</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Watch this, old man!</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>... isn't Susie amazing?</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>... Susie beat up an old man!?</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>AbsorbAx</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A long, curved axe with an indent.</d-text>
+		<d-text>Scoop up HP when you attack.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Scoopin' time.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>Don't scoop me!</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>That red... is that blood?</d-text>
+	</d-box>
+</section>
 
 {% comment %} TODO: Ralsei's scarves {% endcomment %}
 
